demos/canary/good/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-stable-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - canary-good.k8s.orb.local
      secretName: demo-tls
  rules:
    - host: canary-good.k8s.orb.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: canary-stable-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - canary-good.k8s.orb.local
      secretName: demo-tls
  rules:
    - host: canary-good.k8s.orb.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: canary-canary-service
                port:
                  number: 80
